k8s-base/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-playduk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hm-playduk
  template:
    metadata:
      labels:
        app: hm-playduk
    spec:
      containers:
        - name: app
          # Kustomize가 'images' 정의에 따라 이 부분을 덮어씁니다.
          image: ghcr.io/team-dogfoot/hm-playduk:placeholder
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      imagePullSecrets:
        - name: ghcr-auth-secret
