k8s-base/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hm-playduk-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hm-playduk
